--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
 /* Global Layout Set-up */
-@import url('https://fonts.googleapis.com/css?family=Unica+One');
-@import url('https://fonts.googleapis.com/css?family=Karla');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 * {
     box-sizing: border-box;
@@ -27,7 +24,10 @@ a:hover {
     color: #6633ff;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: 'Unica One', cursive;
 }
 
@@ -73,10 +73,11 @@ h1, h2, h3, h4 {
 
 header {
     text-align: center;
-    background: url('images/jogarces-hi.svg') no-repeat top center;
+    background: url('images/jogarces-hi.svg') no-repeat bottom left;
     background-size: cover;
     overflow: hidden;
     padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 header {
@@ -84,31 +85,22 @@ header {
 }
 
 header .profile-image {
-    margin-top: 50px;
-    width: 150px;
-    height: 150px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
-    border: 3px solid white;
-    transition: all .5s;
-}
-
-header .profile-image:hover {
-    transform: scale(1.2) rotate(5deg);
+    border: 5px double white;
+    vertical-align: middle;
+    margin-right: 20px
 }
 
 .tag {
-    background-color: #efefef;
     color: black;
     padding: 10px;
-    border-radius: 5px;
     display: table;
     margin: 10px auto;
 }
 
-.location {
-    background-color: #222;
-    color: yellow;
-}
+.location {}
 
 .card {
     margin: 30px;
@@ -123,22 +115,22 @@ ul.skills {
 }
 
 .skills li {
-    border-radius: 6px;
     display: inline-block;
-    background: #ff9904;
-    color: white;
+    border-bottom: 2px solid black;
+    list-style-type: none;
+    color: black;
     padding: 5px 10px;
     margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-    background: #0399ff;
+    border-bottom: 2px solid #FFE178;
 }
 
 footer {
     width: 100%;
     min-height: 30px;
-    padding: 20px 0 40px 20px;
+    padding: 40px 0 40px 20px;
     background-color: #FFE178;
 }
 
@@ -178,9 +170,35 @@ a.github {
     background-image: url(images/github.svg);
 }
 
+a.twitter:hover,
+a.linkedin:hover,
+a.github:hover {
+    transform: scale(1.2);
+    transition: all .5s;
+}
+
 .clearfix {
     clear: both;
 }
+
+/* Styles specific to Experience page*/
+header#resume {
+    text-align: center;
+    background: url('images/jogarces-header-resume.svg') no-repeat bottom right;
+    background-size: cover;
+    overflow: hidden;
+    padding-top: 60px;
+}
+
+.resumebody {
+    text-align: left;
+    padding: 20px 100px 40px;
+}
+
+.resumebody h3, .resumebody h4 {
+    font-family: 'Montserrat', sans-serif;
+}
+
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
@@ -196,7 +214,21 @@ a.github {
     }
 
     header {
-        min-height: 470px;
+        min-height: 400px;
+    }
+
+    header .tag.name {
+        display: inline;
+        font-size: 64px;
+    }
+
+    header .tag.location {
+        font-size: 36px;
+    }
+
+    header .tag.jobtitle {
+        display: inline;
+        font-size: 36px;
     }
 
     .nav {
@@ -217,4 +249,15 @@ a.github {
         font-size: 1.3em;
     }
 
+}
+
+@media only screen and (max-width: 719px) {
+    .card {
+        padding: 20px 0px 40px;
+    }
+    
+    .resumebody {
+    text-align: left;
+    padding: 20px 20px 40px;
+}
 }
